syntax = "proto3";

package io.aggregator.action;

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "io/aggregator/entity/second_entity.proto";

option java_outer_classname = "SecondToStripedSecondService";

service SecondToStripedSecond {
  option (kalix.codegen) = {
    action: {}
  };

  rpc OnSecondAggregationRequested(entity.SecondAggregationRequested) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "second"
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "second"
    };
  }
}
