syntax = "proto3";

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package io.aggregator.api;

option java_outer_classname = "StripedSecondApi";

service StripedSecond {
  option (kalix.codegen) = {
    event_sourced_entity: {
      name: "io.aggregator.entity.StripedSecond"
      entity_type: "striped_second"
      state: "io.aggregator.entity.StripedSecondState"
      events: [
        "io.aggregator.entity.StripedSecondActivated",
        "io.aggregator.entity.StripedSecondTransactionAdded",
        "io.aggregator.entity.StripedSecondAggregated",
        "io.aggregator.entity.TransactionPaid"  //
      ]
    }
  };

  rpc AddTransaction(AddTransactionCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/striped_second/add-transaction"
      body: "*"
    };
  }

  rpc AggregateStripedSecond(AggregateStripedSecondCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/striped_second/aggregate"
      body: "*"
    };
  }
}

message AddTransactionCommand {
  string merchant_id = 1 [(kalix.field).entity_key = true];
  string service_code = 2 [(kalix.field).entity_key = true];
  string account_from = 3 [(kalix.field).entity_key = true];
  string account_to = 4 [(kalix.field).entity_key = true];
  int64 epoch_second = 5 [(kalix.field).entity_key = true];
  int32 stripe = 6 [(kalix.field).entity_key = true];
  string transaction_id = 7;
  double amount = 8;
  google.protobuf.Timestamp timestamp = 9;
}

message AggregateStripedSecondCommand {
  string merchant_id = 1 [(kalix.field).entity_key = true];
  string service_code = 2 [(kalix.field).entity_key = true];
  string account_from = 3 [(kalix.field).entity_key = true];
  string account_to = 4 [(kalix.field).entity_key = true];
  int64 epoch_second = 5 [(kalix.field).entity_key = true];
  int32 stripe = 6 [(kalix.field).entity_key = true];
  google.protobuf.Timestamp aggregate_request_timestamp = 7;
  string payment_id = 8;
}
