syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "io/aggregator/entity/transaction_merchant_key.proto";

package io.aggregator.entity;

option java_outer_classname = "SecondEntity";

message SecondActivated {
  MerchantKey merchant_key = 1;
  int64 epoch_second = 2;
}

message StripedSecondAdded {
  MerchantKey merchant_key = 1;
  int64 epoch_second = 2;
  int32 stripe = 3;
}

message SecondAggregated {
  MerchantKey merchant_key = 1;
  int64 epoch_second = 2;
  double transaction_total_amount = 3;
  int32 transaction_count = 4;
  google.protobuf.Timestamp last_update_timestamp = 5;
  google.protobuf.Timestamp aggregate_request_timestamp = 6;
  string payment_id = 7;
}

message ActiveStripedSecondAggregated {
  MerchantKey merchant_key = 1;
  int64 epoch_second = 2;
  int32 stripe = 3;
  double transaction_total_amount = 4;
  int32 transaction_count = 5;
  google.protobuf.Timestamp last_update_timestamp = 6;
  google.protobuf.Timestamp aggregate_request_timestamp = 7;
  string payment_id = 8;
}

message SecondAggregationRequested {
  MerchantKey merchant_key = 1;
  int64 epoch_second = 2;
  repeated int32 stripes = 3;
  google.protobuf.Timestamp aggregate_request_timestamp = 6;
  string payment_id = 7;
}

message SecondState {
  MerchantKey merchant_key = 1;
  int64 epoch_second = 2;
  int64 epoch_minute = 3;
  int64 epoch_hour = 4;
  int64 epoch_day = 5;
  repeated ActiveStripedSecond activeStripedSeconds = 6;
  repeated AggregateSecond aggregateSeconds = 7;
  google.protobuf.Timestamp last_update_timestamp = 8;
}

message AggregateSecond {
  repeated ActiveStripedSecond activeStripedSeconds = 1;
  google.protobuf.Timestamp aggregate_request_timestamp = 2;
  string payment_id = 3;
}

message ActiveStripedSecond {
  int64 epoch_second = 1;
  int32 stripe = 2;
  double transaction_total_amount = 3;
  int32 transaction_count = 4;
  google.protobuf.Timestamp last_update_timestamp = 5;
  google.protobuf.Timestamp aggregate_request_timestamp = 6;
  string payment_id = 7;
}
